solved bug on transition effect on Firefox.

--- a/css/timeline-vert.css
+++ b/css/timeline-vert.css
@@ -99,7 +99,9 @@
   z-index: 100;
   cursor: pointer;
   top: 20px;
+  -moz-transition: -webkit-transform 0.2s linear;
   -webkit-transition: -webkit-transform 0.2s linear;
+  transition: -webkit-transform 0.2s linear;
 }
     
 #timeline .radio{
@@ -107,7 +109,9 @@
 }
 #timeline .radio:checked + .relative label{
   cursor: auto;
+  -moz-transform: translateX(42px);
   -webkit-transform: translateX(42px);
+  transform: translateX(42px);
 }
 #timeline .radio:checked + .relative .circle{
   background: #DB5432;
@@ -119,11 +123,16 @@
   max-height: 320px;
   border-color: #DB5432;
   margin-right: 20px;
+  -moz-transform: translateX(20px);
   -webkit-transform: translateX(20px);
+  transform: translateX(20px);
+  
+  -moz-transition: max-height 0.4s linear, border-color 0.5s linear, -webkit-transform 0.2s linear;
   -webkit-transition: max-height 0.4s linear, border-color 0.5s linear, -webkit-transform 0.2s linear;
-  -moz-box-shadow:1px 3px 6px 0px rgba(0,0,0,.4);
+  transition: max-height 0.4s linear, border-color 0.5s linear, -webkit-transform 0.2s linear;
+	
+	-moz-box-shadow:1px 3px 6px 0px rgba(0,0,0,.4);
 	-webkit-box-shadow:1px 3px 6px 0px rgba(0,0,0,.4);
-	-o-box-shadow:1px 3px 6px 0px rgba(0,0,0,.4);
 	box-shadow:1px 3px 6px 0px rgba(0,0,0,.4);
 
 }
@@ -132,6 +141,8 @@
   max-height: 300px;
   color: #4D4640;
   -webkit-transition: color 0.3s linear 0.3s;
+  -moz-transition: color 0.3s linear 0.3s;
+  transition: color 0.3s linear 0.3s;
 }
 
 /* -------------------------------------
@@ -153,7 +164,9 @@
 		text-overflow: ellipsis;
 		overflow: hidden;
 		display: block;
+		-moz-transform: translateX(18px);
 		-webkit-transform: translateX(18px);
+		transform: translateX(18px);
 	}
 	#timeline .content{
 		padding-top: 45px;
